--- a/index.html
+++ b/index.html
@@ -8,20 +8,421 @@
 
     <!--favicon-->
     <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/ico-icon">
-    <!--fontawesome-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!--google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
     <!--css-->
     <link rel="stylesheet" href="./assets/css/styles.min.css" />
 
 </head>
 
 <body>
+
+    <!--header-->
+    <header id="header" class="container">
+
+        <section id="top">
+
+            <!--logo website-->
+            <div id="logo">
+                <img src="./assets/img/logo.svg" alt="logo do website">
+            </div>
+
+            <!--navbar-->
+            <nav id="navbar">
+                <ul>
+                    <li>
+                        <a href="#about">sobre</a>
+                    </li>
+                    <li>
+                        <a href="#projects">projetos</a>
+                    </li>
+                    <li>
+                        <a href="#cv">currículo</a>
+                    </li>
+                    <li>
+                        <a href="#contacts">contatos</a>
+                    </li>
+                </ul>
+            </nav>
+
+        </section>
+
+        <article id="presentation">
+
+            <section id="content">
+                <h1>
+                    olá, eu sou gabriel<br>
+                    <span>programador full-stack</span>
+                </h1>
+
+                <p>
+                    Este portifólio contém todos os meus melhores projetos até o presente momento dos meus estudos
+                    de programação.
+                </p>
+
+                <div class="container-btn">
+                    <a href="#projects" class="btn btn-primary">ver projetos</a>
+                </div>
+            </section>
+
+            <figure id="container-img">
+
+                <img src="./assets/img/programmer-anim.png" alt="animação de um programador web em tons de verde" />
+
+            </figure>
+
+        </article>
+
+    </header>
+
+    <!--main-->
+    <main id="main">
+
+        <!--about section-->
+        <section id="about">
+
+            <h2 class="title-section">sobre min</h2>
+            <article>
+                <p>
+                    Meu nome é Gabriel e eu estudo programação à 4 anos, porém, ainda não havia me direcionado tanto
+                    para o mercado de trabalho, até agora. Atualmente estou procurando meu primeiro emprego nessa
+                    área. Já estudei diversas tecnologias em diversas modalidades de programação, dentre elas,
+                    desenvolvimento desktop e desenvolvimento de games, mas atualmente, estou focado no estudo do
+                    desenvolvimento web, especificamente no modelo full-stack.
+                </p>
+            </article>
+
+            <section class="container">
+
+                <!--skills-->
+                <section id="skills">
+
+                    <h3>Tecnologias que eu utilizo</h3>
+
+                    <section id="container-tecs">
+                        <div id="tecnologies">
+                            <ul>
+                                <li>
+                                    <div class="tecnology">
+                                        <img src="./assets/img/html.svg" alt="imagem do simbolo html" />
+                                    </div>
+                                </li>
+
+                                <li>
+                                    <div class="tecnology">
+                                        <img src="./assets/img/css.svg" alt="imagem do simbolo css" />
+                                    </div>
+                                </li>
+
+                                <li>
+                                    <div class="tecnology">
+                                        <img src="./assets/img/js.svg" alt="imagem do simbolo javascript" />
+                                    </div>
+                                </li>
+
+                                <li>
+                                    <div class="tecnology">
+                                        <img src="./assets/img/bootstrap.svg" alt="imagem do simbolo bootstrap" />
+                                    </div>
+                                </li>
+
+                                <li>
+                                    <div class="tecnology">
+                                        <img src="./assets/img/react.svg" alt="imagem do simbolo react" />
+                                    </div>
+                                </li>
+
+                                <li>
+                                    <div class="tecnology">
+                                        <img src="./assets/img/sass.svg" alt="imagem do simbolo sass" />
+                                    </div>
+                                </li>
+
+                                <li>
+                                    <div class="tecnology">
+                                        <img src="./assets/img/php-mysql.svg" alt="imagem do simbolo php com mysql" />
+                                    </div>
+                                </li>
+
+                                <li>
+                                    <div class="tecnology">
+                                        <img src="./assets/img/git.svg" alt="imagem do simbolo git" />
+                                    </div>
+                                </li>
+
+                                <li>
+                                    <div class="tecnology">
+                                        <img src="./assets/img/github.svg" alt="imagem do simbolo github" />
+                                    </div>
+                                </li>
+
+                            </ul>
+                        </div>
+
+                        <div id="description-tecnology">
+                            <ul>
+                                <li>
+                                    <div class="description hide">
+                                        <p>Arraste o mouse em cima de alguma tecnologia para ver sua descrição</p>
+                                    </div>
+                                </li>
+                                <li class="hide">
+                                    <div class="description">
+                                        <h3>html</h3>
+                                        <p>description</p>
+                                    </div>
+                                </li>
+                                <li class="hide">
+                                    <div class="description">
+                                        <h3>css</h3>
+                                        <p>description</p>
+                                    </div>
+                                </li>
+                                <li class="">
+                                    <div class="description">
+                                        <h3>javascript</h3>
+                                        <p>
+                                            Comecei a estudar javascript a 1 ano, desde então aprendi muitas
+                                            funcionalidades importantes a respeito da linguagem.
+                                        </p>
+                                        <p>
+                                            Aprendi todas as funcionalidades essencias da linguagem para aplicar no meu
+                                            dia a dia de trabalho, dentre todas elas, podemos citar as mais importantes,
+                                            como por exemplo: manipulação do DOM, funções de arrays, objetos, funções
+                                            assíncronas e frameworks, além disso, também procurei me familiarizar um
+                                            pouco com o typescript, e o apliquei parcialmente em um projeto pessoal.
+                                        </p>
+                                    </div>
+                                </li>
+                                <li class="hide">
+                                    <div class="description">
+                                        <h3>bootstrap</h3>
+                                        <p>description</p>
+                                    </div>
+                                </li>
+                                <li class="hide">
+                                    <div class="description">
+                                        <h3>react</h3>
+                                        <p>description</p>
+                                    </div>
+                                </li>
+                                <li class="hide">
+                                    <div class="description">
+                                        <h3>sass</h3>
+                                        <p>description</p>
+                                    </div>
+                                </li>
+                                <li class="hide">
+                                    <div class="description">
+                                        <h3>php com mysql</h3>
+                                        <p>description</p>
+                                    </div>
+                                </li>
+                                <li class="hide">
+                                    <div class="description">
+                                        <h3>git</h3>
+                                        <p>description</p>
+                                    </div>
+                                </li>
+                                <li class="hide">
+                                    <div class="description">
+                                        <h3>github</h3>
+                                        <p>description</p>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
+                    </section>
+
+                </section>
+
+            </section>
+
+        </section>
+
+        <!--projects section-->
+        <section id="projects">
+
+            <h2 class="title-section">projetos</h2>
+
+            <section id="container-projects">
+
+                <ul>
+                    <li>
+                        <div class="project">
+                            <div class="media"></div>
+                            <div class="media-description">
+                                <strong>jogo do Tetris</strong>
+                                <span>html. css. javascript</span>
+                                <a 
+                                    target="_blank"
+                                    href="https://github.com/gabriel8programmer/tetris-project/"
+                                >ir para repositório</a>
+                                <a 
+                                    target="_blank"
+                                    href="https://gabriel8programmer.github.io/tetris-project/"
+                                >ir para site</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="project">
+                            <div class="media"></div>
+                            <div class="media-description">
+                                <strong>indecor</strong>
+                                <span>html. sass</span>
+                                <a 
+                                    target="_blank"
+                                    href="https://github.com/gabriel8programmer/landing-page-02/"
+                                >ir para repositório</a>
+                                <a 
+                                    target="_blank"
+                                    href="https://gabriel8programmer.github.io/landing-page-02/"
+                                >ir para site</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="project">
+                            <div class="media"></div>
+                            <div class="media-description">
+                                <strong>Calculator</strong>
+                                <span>react. typescript. javascript. sass</span>
+                                <a 
+                                    target="_blank"
+                                    href="https://github.com/gabriel8programmer/calculator-react/"
+                                >ir para repositório</a>
+                                <a 
+                                    target="_blank"
+                                    href="https://gabriel8programmer.github.io/calculator-react/"
+                                >ir para site</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="project">
+                            <div class="media"></div>
+                            <div class="media-description">
+                                <strong>cep searcher</strong>
+                                <span>react. css</span>
+                                <a 
+                                    target="_blank"
+                                    href="https://github.com/gabriel8programmer/cep-searcher/"
+                                >ir para repositório</a>
+                                <a 
+                                    target="_blank"
+                                    href="https://gabriel8programmer.github.io/cep-searcher/"
+                                >ir para site</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="project">
+                            <div class="media"></div>
+                            <div class="media-description">
+                                <strong>Jornada front end</strong>
+                                <span>html. sass</span>
+                                <a 
+                                    target="_blank"
+                                    href="https://github.com/gabriel8programmer/hands-one-project/"
+                                >ir para repositório</a>
+                                <a 
+                                    target="_blank"
+                                    href="https://gabriel8programmer.github.io/hands-one-project/"
+                                >ir para site</a>
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="project">
+                            <div class="media"></div>
+                            <div class="media-description">
+                                <strong>Jogo da velha</strong>
+                                <span>html. css. javascript</span>
+                                <a 
+                                    target="_blank"
+                                    href="https://github.com/gabriel8programmer/game-hash/"
+                                >ir para repositório</a>
+                                <a 
+                                    target="_blank"
+                                    href="https://gabriel8programmer.github.io/game-hash/"
+                                >ir para site</a>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+
+            </section>
+
+        </section>
+
+        <!--cv section-->
+        <section id="cv">
+
+            <h2 class="title-section">currículo</h2>
+
+            <section id="container-cv">
+                <p>segue aqui o meu currículo, disponível para download</p>
+                <div class="container-btn">
+                    <a href="https://drive.google.com/file/d/11mfQS7K2wtISQZjG9vAVPA5EI9BujGVz/view?usp=drive_link"
+                        download="currículo.pdf" target="_blank" class="btn btn-primary">
+                        baixar currículo
+                    </a>
+                </div>
+            </section>
+        </section>
+
+        <!--contacts section-->
+        <section id="contacts">
+
+            <h2 class="title-section">contatos</h2>
+
+            <div id="container-contacts">
+                <ul>
+                    <li>
+                        <a href="mailto:gabriel8webprogrammer@gmail.com" target="_blank" class="contact">
+                            <img src="./assets/img/msg.svg" alt="icone de envio de email">
+                            <strong>e-mail</strong>
+                            <span>gabriel8webprogrammer@gmail.com</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://web.whatsapp.com/send?phone=5561995815904" target="_blank" class="contact">
+                            <img src="./assets/img/whatsapp.svg" alt="icone do whatsapp">
+                            <strong>whatsapp</strong>
+                            <span>+55 (61) 998581-5904</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://github.com/gabriel8programmer/" target="_blank" class="contact">
+                            <img src="./assets/img/github.svg" alt="icone do github">
+                            <strong>github</strong>
+                            <span>https://github.com/gabriel8programmer</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.linkedin.com/in/gabrielwebprogrammer/" target="_blank" class="contact">
+                            <img src="./assets/img/linkedin.svg" alt="icone do linkedin">
+                            <strong>linkedin</strong>
+                            <span>https://www.linkedin.com/in/gabrielwebprogrammer/</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+
+        </section>
+
+    </main>
+
+    <!--footer-->
+    <footer id="footer">
+        <p>
+            &copy; copyright 2024 - Gabriel Pereira<br>
+            Todos os direitos reservados
+        </p>
+    </footer>
 
     <script src="./assets/js/index.js"></script>
 </body>
