add video in project

--- a/index.html
+++ b/index.html
@@ -256,14 +256,10 @@
                             <div class="media-description">
                                 <strong>jogo do Tetris</strong>
                                 <span>html. css. javascript</span>
-                                <a 
-                                    target="_blank"
-                                    href="https://github.com/gabriel8programmer/tetris-project/"
-                                >ir para repositório</a>
-                                <a 
-                                    target="_blank"
-                                    href="https://gabriel8programmer.github.io/tetris-project/"
-                                >ir para site</a>
+                                <a target="_blank" href="https://github.com/gabriel8programmer/tetris-project/">ir para
+                                    repositório</a>
+                                <a target="_blank" href="https://gabriel8programmer.github.io/tetris-project/">ir para
+                                    site</a>
                             </div>
                         </div>
                     </li>
@@ -273,31 +269,29 @@
                             <div class="media-description">
                                 <strong>indecor</strong>
                                 <span>html. sass</span>
-                                <a 
-                                    target="_blank"
-                                    href="https://github.com/gabriel8programmer/landing-page-02/"
-                                >ir para repositório</a>
-                                <a 
-                                    target="_blank"
-                                    href="https://gabriel8programmer.github.io/landing-page-02/"
-                                >ir para site</a>
+                                <a target="_blank" href="https://github.com/gabriel8programmer/landing-page-02/">ir para
+                                    repositório</a>
+                                <a target="_blank" href="https://gabriel8programmer.github.io/landing-page-02/">ir para
+                                    site</a>
                             </div>
                         </div>
                     </li>
                     <li>
                         <div class="project">
-                            <div class="media"></div>
+                            <div class="media">
+                                <iframe width="300" height="200"
+                                    src="https://www.youtube.com/embed/9axrEz3ASHA?si=EY_DfOGDklM5fxtV"
+                                    title="YouTube video player" frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                                    allowfullscreen></iframe>
+                            </div>
                             <div class="media-description">
                                 <strong>Calculator</strong>
-                                <span>react. typescript. javascript. sass</span>
-                                <a 
-                                    target="_blank"
-                                    href="https://github.com/gabriel8programmer/calculator-react/"
-                                >ir para repositório</a>
-                                <a 
-                                    target="_blank"
-                                    href="https://gabriel8programmer.github.io/calculator-react/"
-                                >ir para site</a>
+                                <span>react. typescript. sass</span>
+                                <a target="_blank" href="https://github.com/gabriel8programmer/calculator-react/">ir
+                                    para repositório</a>
+                                <a target="_blank" href="https://gabriel8programmer.github.io/calculator-react/">ir para
+                                    site</a>
                             </div>
                         </div>
                     </li>
@@ -307,14 +301,10 @@
                             <div class="media-description">
                                 <strong>cep searcher</strong>
                                 <span>react. css</span>
-                                <a 
-                                    target="_blank"
-                                    href="https://github.com/gabriel8programmer/cep-searcher/"
-                                >ir para repositório</a>
-                                <a 
-                                    target="_blank"
-                                    href="https://gabriel8programmer.github.io/cep-searcher/"
-                                >ir para site</a>
+                                <a target="_blank" href="https://github.com/gabriel8programmer/cep-searcher/">ir para
+                                    repositório</a>
+                                <a target="_blank" href="https://gabriel8programmer.github.io/cep-searcher/">ir para
+                                    site</a>
                             </div>
                         </div>
                     </li>
@@ -324,14 +314,10 @@
                             <div class="media-description">
                                 <strong>Jornada front end</strong>
                                 <span>html. sass</span>
-                                <a 
-                                    target="_blank"
-                                    href="https://github.com/gabriel8programmer/hands-one-project/"
-                                >ir para repositório</a>
-                                <a 
-                                    target="_blank"
-                                    href="https://gabriel8programmer.github.io/hands-one-project/"
-                                >ir para site</a>
+                                <a target="_blank" href="https://github.com/gabriel8programmer/hands-one-project/">ir
+                                    para repositório</a>
+                                <a target="_blank" href="https://gabriel8programmer.github.io/hands-one-project/">ir
+                                    para site</a>
                             </div>
                         </div>
                     </li>
@@ -341,14 +327,10 @@
                             <div class="media-description">
                                 <strong>Jogo da velha</strong>
                                 <span>html. css. javascript</span>
-                                <a 
-                                    target="_blank"
-                                    href="https://github.com/gabriel8programmer/game-hash/"
-                                >ir para repositório</a>
-                                <a 
-                                    target="_blank"
-                                    href="https://gabriel8programmer.github.io/game-hash/"
-                                >ir para site</a>
+                                <a target="_blank" href="https://github.com/gabriel8programmer/game-hash/">ir para
+                                    repositório</a>
+                                <a target="_blank" href="https://gabriel8programmer.github.io/game-hash/">ir para
+                                    site</a>
                             </div>
                         </div>
                     </li>
